[package]
name = "swayy"
version = "0.1.0"
authors = ["forc"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }
fuels-abigen-macro = { git = "ssh://git@github.com/FuelLabs/fuels-rs.git" }
fuels-rs = { git = "ssh://git@github.com/FuelLabs/fuels-rs.git" }
fuel-gql-client = { version = "0.1", default-features = false }
fuel-tx = { git = "ssh://git@github.com/FuelLabs/fuel-tx.git" }
rand = "0.8"

[[test]]
name = "integration_tests"
path = "tests/harness.rs"
harness = true
